# fonts-compare

./: .gitignore  LICENSE  README.md  fonts-compare  fonts-compare.desktop  fonts-compare.spec  fonts_compare.py  lohit-vs-noto-comparison.html  lohit-vs-noto-comparison.md  org.github.sudipshil9862.fonts-compare.desktop  pylintrc  run.sh  setup.cfg  setup.py
fonts_compare/: __init__.py  fonts_compare.py
src/fonts_compare/: fonts_compare.py
src/fonts_compare.egg-info/: PKG-INFO
