[metadata]
name = fonts-compare
version = 1.2.7
description = A tool to compare fonts
long_description = file: README.md
long_description_content_type = text/markdown
author = Sudip Shil
author_email = sudipshil9862@gmail.com
license = MIT
url = https://github.com/sudipshil9862/fonts-compare
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
install_requires =
    PyGObject
    langdetect
    langtable

[options.entry_points]
console_scripts =
    fonts-compare = fonts_compare.fonts_compare:fonts_compare
