[metadata]
name = fonts_compare
version = 1.2.8
description = A tool to compare fonts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sudipshil9862/fonts-compare
author = Sudip Shil
author_email = sudipshil9862@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    PyGObject
    langdetect
    langtable
python_requires = >=3.7
package_dir = =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    fonts-compare = fonts_compare.fonts_compare:main
